--- a/HelpdeskKit/HelpdeskKitView.xaml
+++ b/HelpdeskKit/HelpdeskKitView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="HelpdeskKit.MainWindow"
+﻿<Window x:Class="HelpdeskKit.HelpdeskKitView"
 		xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -84,57 +84,69 @@
         
         <materialDesign:Card Grid.Row="2" Grid.Column="0" 
                              Margin="5" 
-                             HorizontalContentAlignment="Center" 
-                             VerticalContentAlignment="Center" 
-                             VerticalAlignment="Center" 
-                             HorizontalAlignment="Center" 
-                             Height="195"
+                             Height="220"
                              materialDesign:ShadowAssist.ShadowDepth="Depth1">
-            <StackPanel Orientation="Vertical" Margin="0" >
-                <StackPanel.Resources>
+            <Grid Margin="0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="1*"></RowDefinition>
+                    <RowDefinition Height="1*"></RowDefinition>
+                    <RowDefinition Height="1*"></RowDefinition>
+                    <RowDefinition Height="1*"></RowDefinition>
+                    <RowDefinition Height="1.3*"></RowDefinition>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="40*"></ColumnDefinition>
+                    <ColumnDefinition Width="50*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Grid.Resources>
                     <Style TargetType="materialDesign:PackIcon" x:Key="AlignWithTextBlock">
-                        <Setter Property="Margin" Value="0,10,0,0"/>
+                        <Setter Property="Margin" Value="0,9,0,0"/>
                         <Setter Property="Foreground" Value="White"/>
                     </Style>
-                    <Style TargetType="{x:Type Label}">
-                        <Setter Property="Margin" Value="5,0,2,0"/>
-                        <Setter Property="Foreground" Value="White"/>
+                    <Style TargetType="StackPanel" x:Key="AlignWithTextBox">
+                        <Setter Property="Margin" Value="0,5,0,0"/>
+                        <Setter Property="Orientation" Value="Horizontal"/>
+                        <Setter Property="HorizontalAlignment" Value="Right"/>
                     </Style>
-                </StackPanel.Resources>
-                <Label>
-                    <StackPanel Orientation="Horizontal">
-                        <materialDesign:PackIcon Kind="Account" Style="{StaticResource AlignWithTextBlock}" />
-                        <TextBlock>Username:</TextBlock>
-                        <TextBlock>luu.nhat-hongxxxxxxxxxx</TextBlock>
-                    </StackPanel>
-                </Label>
-                <Label>
-                    <StackPanel Orientation="Horizontal">
-                        <materialDesign:PackIcon Kind="Lock" Style="{StaticResource AlignWithTextBlock}"  />
-                        <TextBlock>Lock:</TextBlock>
-                    </StackPanel>
-                </Label>
-                <Label>
-                    <StackPanel Orientation="Horizontal">
-                        <materialDesign:PackIcon Kind="Fingerprint" Style="{StaticResource AlignWithTextBlock}"  />
-                        <TextBlock>Expire:</TextBlock>
-                    </StackPanel>
-                </Label>
-                <Label>
-                    <StackPanel Orientation="Horizontal">
-                        <materialDesign:PackIcon Kind="Home" Style="{StaticResource AlignWithTextBlock}"  />
-                        <TextBlock>Batch:</TextBlock>
-                    </StackPanel>
-                </Label>
-            </StackPanel>
+                    <Style TargetType="TextBox" BasedOn="{StaticResource MaterialDesignTextBox}">
+                        <Setter Property="Margin" Value="0,0,0,0"/>
+                        <Setter Property="Width" Value="120"/>
+                        <Setter Property="Height" Value="35"/>
+                        <Setter Property="HorizontalAlignment" Value="Left"/>
+                        <Setter Property="materialDesign:TextFieldAssist.DecorationVisibility" Value="Collapsed"/>
+                    </Style>
+                </Grid.Resources>
+
+                <StackPanel Grid.Row="0" Grid.Column="0" Style="{StaticResource AlignWithTextBox}">
+                    <materialDesign:PackIcon Kind="Account" Style="{StaticResource AlignWithTextBlock}" />
+                    <TextBlock HorizontalAlignment="Right">Username:</TextBlock>
+                </StackPanel>
+                <StackPanel Grid.Row="1" Grid.Column="0" Style="{StaticResource AlignWithTextBox}">
+                    <materialDesign:PackIcon  Kind="Lock" Style="{StaticResource AlignWithTextBlock}"  />
+                    <TextBlock>Lock:</TextBlock>
+                </StackPanel>
+                <StackPanel Grid.Row="2" Grid.Column="0" Style="{StaticResource AlignWithTextBox}">
+                    <materialDesign:PackIcon  Kind="Fingerprint" Style="{StaticResource AlignWithTextBlock}"  />
+                    <TextBlock>Expire:</TextBlock>
+                </StackPanel>
+                <StackPanel Grid.Row="3" Grid.Column="0" Style="{StaticResource AlignWithTextBox}">
+                    <materialDesign:PackIcon  Kind="Home" Style="{StaticResource AlignWithTextBlock}"  />
+                    <TextBlock>Batch:</TextBlock>
+                </StackPanel>
+
+                
+                
+                <TextBox x:Name="TextBoxUsername" Grid.Row="0" Grid.Column="1" IsReadOnly="True">luu.nhat-hong</TextBox>
+                <TextBox x:Name="TextBoxLock" Grid.Row="1" Grid.Column="1" IsReadOnly="True">Unlock</TextBox>
+                <TextBox x:Name="TextBoxExpire" Grid.Row="2" Grid.Column="1" IsReadOnly="True">04/04/2017</TextBox>
+                <TextBox x:Name="TextBoxBatch" Grid.Row="3" Grid.Column="1" IsReadOnly="True"></TextBox>
+
+           
+            </Grid>
         </materialDesign:Card>
         <materialDesign:Card Grid.Row="2" Grid.Column="1" 
                              Margin="5" 
-                             HorizontalContentAlignment="Center" 
-                             VerticalContentAlignment="Center" 
-                             VerticalAlignment="Center" 
-                             HorizontalAlignment="Center" 
-                             Height="195"
+                             Height="220"
                              materialDesign:ShadowAssist.ShadowDepth="Depth1">
             <StackPanel Orientation="Vertical">
                 <StackPanel.Resources>
