--- a/HelpdeskKit/HelpdeskKitView.xaml
+++ b/HelpdeskKit/HelpdeskKitView.xaml
@@ -7,7 +7,7 @@
 		xmlns:local="clr-namespace:HelpdeskKit"
 		xmlns:rules="clr-namespace:HelpdeskKit.Rules"
 		mc:Ignorable="d"
-		Height="425" Width="430"
+		Height="420" Width="430"
 		ResizeMode="NoResize"
 		TextElement.Foreground="{DynamicResource MaterialDesignBody}"
 		Background="{DynamicResource MaterialDesignPaper}"
@@ -31,11 +31,15 @@
 
             <RowDefinition Height="35*"/>
             <RowDefinition Height="50*"/>
-            <RowDefinition Height="250*"/>
+            <RowDefinition Height="245*"/>
 
         </Grid.RowDefinitions>
         <!--status bar-->
-        <materialDesign:Card Grid.Row="0" Grid.ColumnSpan="2" Margin="0,3,0,-2" VerticalAlignment="Stretch">
+        <materialDesign:Card
+                materialDesign:ShadowAssist.ShadowDepth="Depth2" 
+                Grid.Row="0" Grid.ColumnSpan="2" 
+                Margin="0,3,0,-2" 
+                VerticalAlignment="Stretch">
 
         </materialDesign:Card>
         <StackPanel Orientation="Horizontal" 
@@ -81,11 +85,11 @@
             </RadioButton>
         </StackPanel>
         
-        <materialDesign:Card Grid.Row="2" Grid.Column="0" 
+        <materialDesign:Card x:Name="CardUserStats" Grid.Row="2" Grid.Column="0" 
                              Margin="5" 
-                             Height="285"
+                             Height="280"
                              materialDesign:ShadowAssist.ShadowDepth="Depth1">
-            <Grid Margin="0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+            <Grid Margin="0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" ScrollViewer.VerticalScrollBarVisibility="Disabled">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="1*"></RowDefinition>
                     <RowDefinition Height="1*"></RowDefinition>
@@ -145,8 +149,8 @@
                 <TextBox x:Name="TextBoxDesc" Grid.Row="4" Grid.Column="1" 
                          IsReadOnly="True"
                          TextWrapping="Wrap"
-                         MaxHeight="90"
-                         Height="90"
+                         MaxHeight="70"
+                         Height="70"
                          MaxWidth="120"
                          VerticalScrollBarVisibility="Auto"
                          AcceptsReturn="True"
@@ -156,9 +160,9 @@
            
             </Grid>
         </materialDesign:Card>
-        <materialDesign:Card Grid.Row="2" Grid.Column="1" 
+        <materialDesign:Card x:Name="CardAction" Grid.Row="2" Grid.Column="1" 
                              Margin="5" 
-                             Height="285"
+                             Height="{Binding ElementName=CardUserStats,Path=Height}"
                              materialDesign:ShadowAssist.ShadowDepth="Depth1">
             <StackPanel Orientation="Vertical">
                 <StackPanel.Resources>
