--- a/HelpdeskKit/Views/Controls/GeneralPageControl.xaml
+++ b/HelpdeskKit/Views/Controls/GeneralPageControl.xaml
@@ -1,20 +1,11 @@
-﻿<Window x:Class="HelpdeskKit.HelpdeskKitView"
-		xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-		xmlns:local="clr-namespace:HelpdeskKit"
-		xmlns:rules="clr-namespace:HelpdeskKit.Rules"
-		mc:Ignorable="d"
-		Height="420" Width="430"
-		ResizeMode="NoResize"
-		TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-		Background="{DynamicResource MaterialDesignPaper}"
-		TextElement.FontWeight="Normal"
-		TextElement.FontSize="13.5"
-        Title="Helpdesk Kit"
-		FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto">
+﻿<UserControl x:Class="HelpdeskKit.Views.Controls.GeneralPageControl"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             mc:Ignorable="d" 
+             d:DesignHeight="350" d:DesignWidth="430">
     <Grid>
         <Grid.Resources>
             <Style TargetType="{x:Type TextBlock}">
@@ -22,50 +13,16 @@
             </Style>
         </Grid.Resources>
         <Grid.ColumnDefinitions>
-
             <ColumnDefinition Width="350*"/>
             <ColumnDefinition Width="180*"/>
-
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-
-            <RowDefinition Height="35*"/>
             <RowDefinition Height="50*"/>
             <RowDefinition Height="245*"/>
 
         </Grid.RowDefinitions>
-        <!--status bar-->
-        <materialDesign:ColorZone
-                materialDesign:ShadowAssist.ShadowDepth="Depth1" 
-                Grid.Row="0" Grid.ColumnSpan="2" 
-                VerticalAlignment="Stretch"
-                Background="{StaticResource PrimaryHueMidBrush}">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="8*"/>
-                    <ColumnDefinition Width="1*"/>
-                </Grid.ColumnDefinitions>
-                <ToggleButton Style="{StaticResource MaterialDesignHamburgerToggleButton}" 
-                                Grid.Column="0"
-                                IsChecked="False"
-                                x:Name="MenuToggleButton"
-                                VerticalAlignment="Center"
-                                HorizontalAlignment="Center"
-                                Padding="0"
-                                Foreground="{StaticResource PrimaryHueDarkForegroundBrush}"/>
-                <TextBlock Text="Binding"
-                           x:Name="ContentTitle"
-                           Grid.Column="1"
-                           VerticalAlignment="Center"  
-                           HorizontalAlignment="Center"
-                           FontSize="18" 
-                           FontWeight="Medium"
-                           Foreground="{StaticResource PrimaryHueDarkForegroundBrush}"/>
-            </Grid>
-        </materialDesign:ColorZone>
         <StackPanel Orientation="Horizontal" 
-                    Grid.Row="1"
+                    Grid.Row="0"
                     Grid.ColumnSpan="999" 
                     HorizontalAlignment="Center" 
                     VerticalAlignment="Center">
@@ -98,7 +55,7 @@
                     materialDesign:RippleAssist.Feedback="#FFCC80">
                 <materialDesign:PackIcon Style="{StaticResource SyncBorder}" Kind="Magnify" Width="20" Height="20" Margin="0" />
             </Button>
-            
+
             <RadioButton IsChecked="True" GroupName="SearchType" Width="50" Height="25" Margin="25,20,0,0">
                 <TextBlock Margin="0">AD</TextBlock>
             </RadioButton>
@@ -106,8 +63,8 @@
                 <TextBlock Margin="0">HR</TextBlock>
             </RadioButton>
         </StackPanel>
-        
-        <materialDesign:Card x:Name="CardUserStats" Grid.Row="2" Grid.Column="0" 
+
+        <materialDesign:Card x:Name="CardUserStats" Grid.Row="1" Grid.Column="0" 
                              Margin="5" 
                              Height="280"
                              materialDesign:ShadowAssist.ShadowDepth="Depth1">
@@ -164,10 +121,10 @@
                 </StackPanel>
 
 
-                <TextBox x:Name="TextBoxUsername" Grid.Row="0" Grid.Column="1" IsReadOnly="True">luu.nhat-hong</TextBox>
-                <TextBox x:Name="TextBoxLock" Grid.Row="1" Grid.Column="1" IsReadOnly="True">Unlock</TextBox>
+                <TextBox x:Name="TextBoxUsername" Grid.Row="0" Grid.Column="1" IsReadOnly="True">test user</TextBox>
+                <TextBox x:Name="TextBoxLock" Grid.Row="1" Grid.Column="1" IsReadOnly="True">Unlocked</TextBox>
                 <TextBox x:Name="TextBoxExpire" Grid.Row="2" Grid.Column="1" IsReadOnly="True">04/04/2017</TextBox>
-                <TextBox x:Name="TextBoxBatch" Grid.Row="3" Grid.Column="1" IsReadOnly="True"></TextBox>
+                <TextBox x:Name="TextBoxBatch" Grid.Row="3" Grid.Column="1" IsReadOnly="True">Yo!</TextBox>
                 <TextBox x:Name="TextBoxDesc" Grid.Row="4" Grid.Column="1" 
                          IsReadOnly="True"
                          TextWrapping="Wrap"
@@ -179,10 +136,10 @@
                          TextAlignment="Left"
                          VerticalAlignment="Top">Information Technology - Network</TextBox>
 
-           
+
             </Grid>
         </materialDesign:Card>
-        <materialDesign:Card x:Name="CardAction" Grid.Row="2" Grid.Column="1" 
+        <materialDesign:Card x:Name="CardAction" Grid.Row="1" Grid.Column="1"
                              Margin="5" 
                              Height="{Binding ElementName=CardUserStats,Path=Height}"
                              materialDesign:ShadowAssist.ShadowDepth="Depth1">
@@ -228,4 +185,4 @@
             </StackPanel>
         </materialDesign:Card>
     </Grid>
-</Window>
+</UserControl>
