--- a/HelpdeskKit/Views/ContentControls/AutomationPageControl.xaml
+++ b/HelpdeskKit/Views/ContentControls/AutomationPageControl.xaml
@@ -1,10 +1,9 @@
-﻿<UserControl x:Class="HelpdeskKit.Views.Controls.AutomationPageControl"
+﻿<UserControl x:Class="HelpdeskKit.Views.ContentControls.AutomationPageControl"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:HelpdeskKit.Views.Controls"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d" 
              d:DesignHeight="350" d:DesignWidth="430">
     <Grid VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
@@ -28,6 +27,7 @@
             <ColumnDefinition Width="60*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="100*"/>
             <RowDefinition Height="100*"/>
         </Grid.RowDefinitions>
         <GroupBox Grid.Column="0"
@@ -82,8 +82,24 @@
                 <TextBlock Text="Compose reply" Grid.Row="1" Grid.Column="0"/>
                 <ToggleButton Grid.Column="1" Grid.Row="1"/>
                 <TextBlock Text="Send reply" Grid.Row="2" Grid.Column="0"/>
-                <ToggleButton Grid.Column="1" Grid.Row="3"/>
+                <ToggleButton Grid.Column="1" Grid.Row="2"/>
             </Grid>
+        </GroupBox>
+        <GroupBox Grid.ColumnSpan="2" 
+                  Grid.Column="0"
+                  Grid.Row="1"
+                  Style="{DynamicResource MaterialDesignGroupBox}" 
+                  Margin="5"
+                  materialDesign:ShadowAssist.ShadowDepth="Depth2" 
+                  BorderThickness="0"
+                  Padding="0"
+                  VerticalContentAlignment="Top">
+            <GroupBox.Header>
+                <StackPanel Orientation="Horizontal" Margin="0" HorizontalAlignment="Center">
+                    <materialDesign:PackIcon Kind="EmoticonCool" Margin="0,10,0,0" Foreground="Black"/>
+                    <TextBlock Text="Auto Reply" Foreground="Black"/>
+                </StackPanel>
+            </GroupBox.Header>
         </GroupBox>
     </Grid>
 </UserControl>
