--- a/HelpdeskKit/Views/ContentControls/GeneralPageControl.xaml
+++ b/HelpdeskKit/Views/ContentControls/GeneralPageControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="HelpdeskKit.Views.Controls.GeneralPageControl"
+﻿<UserControl x:Class="HelpdeskKit.Views.ContentControls.GeneralPageControl"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
