--- a/HelpdeskKit/Dialogs/LoginDialog.xaml
+++ b/HelpdeskKit/Dialogs/LoginDialog.xaml
@@ -4,9 +4,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:v="clr-namespace:HelpdeskKit.Views"
              TextElement.Foreground="{StaticResource MaterialDesignBody}"
              Background="{StaticResource MaterialDesignPaper}"
              Height="180" Width="250">
+    <UserControl.Resources>
+        <v:InverseBooleanConverter x:Key="InverseBool" />
+        <v:BoolToVisibilityConverter x:Key="BoolToVisibility" />
+        <v:ReverseBoolToVisibilityConverter x:Key="rBoolToVisibility" />
+    </UserControl.Resources>
     <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
         <StackPanel.Resources>
             <Style TargetType="materialDesign:PackIcon" x:Key="AlignPackIcon">
@@ -19,19 +25,19 @@
             </Style>
             <!--sync border for packicon-->
             <Style TargetType="materialDesign:PackIcon" BasedOn="{StaticResource AlignPackIcon}"
-                   x:Key="PackIconUsernameSyncBorder">
+                       x:Key="PackIconUsernameSyncBorder">
                 <Style.Triggers>
                     <DataTrigger Binding="{Binding IsSelectionActive, ElementName=TextBoxUsername}"
-                                 Value="True">
+                                     Value="True">
                         <Setter Property="Foreground" Value="{StaticResource PrimaryHueMidBrush}" />
                     </DataTrigger>
                 </Style.Triggers>
             </Style>
             <Style TargetType="materialDesign:PackIcon" BasedOn="{StaticResource AlignPackIcon}"
-                   x:Key="PackIconPwdSyncBorder">
+                       x:Key="PackIconPwdSyncBorder">
                 <Style.Triggers>
                     <DataTrigger Binding="{Binding IsSelectionActive, ElementName=TextBoxPassword}"
-                                 Value="True">
+                                     Value="True">
                         <Setter Property="Foreground" Value="{StaticResource PrimaryHueMidBrush}" />
                     </DataTrigger>
                 </Style.Triggers>
@@ -41,12 +47,13 @@
             <StackPanel Orientation="Horizontal">
                 <materialDesign:PackIcon Kind="Face" Style="{StaticResource PackIconUsernameSyncBorder}" />
                 <TextBox Style="{StaticResource MaterialDesignFloatingHintTextBox}"
-                         BorderBrush="{StaticResource MaterialDesignTextBoxBorder}"
-                         Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"
-                         Width="150"
-                         materialDesign:HintAssist.Hint="Username"
-                         materialDesign:HintAssist.HintOpacity="0.2"
-                         x:Name="TextBoxUsername">
+                             BorderBrush="{StaticResource MaterialDesignTextBoxBorder}"
+                             Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"
+                             Width="150"
+                             materialDesign:HintAssist.Hint="Username"
+                             materialDesign:HintAssist.HintOpacity="0.2"
+                             x:Name="TextBoxUsername"
+                             IsReadOnly="{Binding IsLoggingIn}">
                     <TextBox.InputBindings>
                         <KeyBinding Command="{Binding LoginCommand}" Key="Enter" />
                     </TextBox.InputBindings>
@@ -57,12 +64,13 @@
             <StackPanel Orientation="Horizontal">
                 <materialDesign:PackIcon Kind="Fingerprint" Style="{StaticResource PackIconPwdSyncBorder}" />
                 <TextBox Style="{StaticResource MaterialDesignFloatingHintTextBox}"
-                         BorderBrush="{StaticResource MaterialDesignTextBoxBorder}"
-                         Text="{Binding Password, UpdateSourceTrigger=PropertyChanged}"
-                         Width="150"
-                         materialDesign:HintAssist.Hint="Password"
-                         materialDesign:HintAssist.HintOpacity="0.2"
-                         x:Name="TextBoxPassword" >
+                             BorderBrush="{StaticResource MaterialDesignTextBoxBorder}"
+                             Text="{Binding Password, UpdateSourceTrigger=PropertyChanged}"
+                             Width="150"
+                             materialDesign:HintAssist.Hint="Password"
+                             materialDesign:HintAssist.HintOpacity="0.2"
+                             x:Name="TextBoxPassword"
+                             IsReadOnly="{Binding IsLoggingIn}">
                     <TextBox.InputBindings>
                         <KeyBinding Command="{Binding LoginCommand}" Key="Enter" />
                     </TextBox.InputBindings>
@@ -70,8 +78,17 @@
             </StackPanel>
         </Label>
         <TextBlock Text="{Binding LoginStatusMessage}" Foreground="#F57C00" HorizontalAlignment="Center" Margin="3" />
-        <Button Width="70" Height="25" Margin="7" FontSize="12" Padding="0" Command="{Binding LoginCommand}">
-            <TextBlock Text="Login" />
+        <Button Width="70" Height="28" Margin="7" FontSize="12" Padding="0" Command="{Binding LoginCommand}">
+            <Canvas>
+                <TextBlock Text="Login" Visibility="{Binding IsLoggingIn, Converter={StaticResource rBoolToVisibility}}" Canvas.Left="-14" Canvas.Top="-8"/>
+                <ProgressBar Style="{StaticResource MaterialDesignCircularProgressBar}"                     
+                                Value="0"
+                                IsIndeterminate="True"
+                                VerticalAlignment="Center"
+                                HorizontalAlignment="Center"
+                                Visibility="{Binding IsLoggingIn, Converter={StaticResource BoolToVisibility}}"
+                                Foreground="{StaticResource PrimaryHueDarkForegroundBrush}" Canvas.Left="-9" Canvas.Top="-10"/>
+            </Canvas>
         </Button>
     </StackPanel>
 </UserControl>
